# Bitcrack-OpenCL

./: CMakeLists.txt  Makefile  README.md  REFACTORING_SUMMARY.md  debug.md  result.txt  rx580_128_thread_cmd.txt  target.txt  test.py
AMD_APP_SDK/2.9-1/docs/: AMDAPPSDKOnlineDocs.url  APPSDK_EULA.rtf  MathLib.url  StreamDoc.url
program/linux/: bitcrack
src/: bitcrack.cl  bitcrack_cl.cpp
src/main/: DeviceManager.cpp  main.cpp
src/opencl/: CLKeySearchDevice.cpp
